# DataCleaner

./: auto_commit_log.txt  cleaned_test.csv  pyproject.toml  refineflow_report.html  schema_snapshot.json  try.py
artifacts/scratch/: debug_date.py  debug_pipeline.py  debug_test.py
docs/: enterprise_advanced_problems.md  goal.md  implementation_plan.md  module1_core_infrastructure.md  module2_engine_partitioning.md  module3_parallel_cleaning.md  module4_merge_validation.md  module5_viz_bi.md  module6_report_export.md
files/: delivery.csv  payments.csv  products.csv
final_output/: cleaned_test.csv  refineflow_report.html
refineflow/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  exporter.py  global_validator.py  logger.py  merger.py  parallel_runner.py  partitioner.py  reporter.py  scanner.py  schema_drift.py  utils.py
refineflow/cleaning/: __init__.py  deduplicator.py  memory_optimizer.py  null_handler.py  outlier_detector.py  pipeline.py  text_cleaner.py  type_fixer.py  unit_normalizer.py  validator.py
refineflow/engine/: __init__.py  dask_engine.py  loader.py  pandas_engine.py  polars_engine.py  selector.py  spark_engine.py
refineflow/templates/: report_template.html
refineflow/viz/: __init__.py  feature_scaler.py  powerbi_prep.py  prep_engine.py  recommender.py  tableau_prep.py
tests/: create_test_data.py  test_data_integrity.py  test_module1.py  test_module2.py  test_module3.py  test_module4.py  test_module5.py  test_module6.py
tests/data/: corrupted.csv  duplicates.csv  issues.csv  normal.csv  tiny.csv
