[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "refineflow"
version = "0.1.0"
description = "Distributed Intelligent Data Refinement Engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0",
    "polars>=0.19",
    "pyarrow>=13.0",
    "psutil>=5.9",
    "chardet>=5.0",
    "tqdm>=4.65",
    "colorama>=0.4",
    "scipy>=1.11",
    "jinja2>=3.1",
    "click>=8.1",
    "openpyxl>=3.1",
    "dask[dataframe]>=2023.1",
    "regex>=2023.1",
    "beautifulsoup4>=4.12",
    "recordlinkage>=0.15",
]

[project.optional-dependencies]
pdf    = ["weasyprint"]
tableau = ["pantab"]
spark  = ["pyspark>=3.4"]
full   = ["weasyprint", "pantab", "pyspark>=3.4"]

[project.scripts]
refineflow = "refineflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["refineflow*"]
